# servoflow

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.bench  README.md  docker-build.sh
benchmarks/: CMakeLists.txt  bench_attention.cu  bench_hf_rdt1b.py  bench_pipeline.cpp  hf_results.json  run_comparison.sh
examples/: CMakeLists.txt  octo_inference.cpp  run_inference.cpp
include/servoflow/backend/: backend.h
include/servoflow/backend/cuda/: cuda_backend.h
include/servoflow/core/: device.h  dtype.h  shape.h  storage.h  tensor.h
include/servoflow/engine/: inference_engine.h
include/servoflow/loader/: safetensors.h
include/servoflow/models/octo/: config.h  octo.h
include/servoflow/models/rdt1b/: rdt1b.h
include/servoflow/sampling/: sampler.h
src/backend/: backend.cpp
src/backend/cuda/: cuda_backend.cu
src/backend/cuda/ops/: attention.cu  attention.h  elementwise.cu  elementwise.cuh  norm.cuh  permute.cu  permute.h
src/engine/: inference_engine.cpp
src/models/octo/: octo.cpp
src/models/rdt1b/: dit_block.cpp  dit_block.cu  rdt1b.cpp
src/sampling/: flow_matching.cpp
tests/: CMakeLists.txt
tests/alignment/: align_octo.cpp
tests/integration/: test_vla_pipeline.cpp
tests/models/: test_octo.cpp
tests/unit/: test_dtype.cpp  test_sampler.cpp  test_shape.cpp  test_tensor.cpp
